Unity: Generate reproducible unity IDs for anonymous namespaces

Fixes: #21564