Tests/RunCMake/UnityBuild/unitybuild_anon_ns.cmake
@@ -4,7 +4,7 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/unitybuild_anon_ns_test_files.cmake)
 
 write_unity_build_anon_ns_test_files(srcs)
 
-add_library(tgt SHARED ${srcs})
+add_library(tgt SHARED f.cxx ${srcs})
 
 set_target_properties(tgt PROPERTIES UNITY_BUILD ON)
 
